--- a/JDownLoaderAPI/JDownLoaderAPI.csproj
+++ b/JDownLoaderAPI/JDownLoaderAPI.csproj
@@ -46,7 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="alllist.cs" />
+    <Compile Include="alllist_ds.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="jDownloaderRemoteControlAPI.cs" />
+    <Compile Include="jdownloader_data.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remote.cs" />
   </ItemGroup>
